--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,22 @@
 	<link rel="stylesheet" href="/styles/home.css">
 
 </head>
+<body>	
 	<h1 id="chat-title">Chat App</h1>
 
 	<main>
+		<form></form>
+	
 		<div id="chat-box">
-
 		</div>
 
-		<div id="box__input-msg">
-			<input id="input-msg" onkeydown="handleInputKey(this)" type="text"/>
+		<form id="msg-form">
+		<input id="input-msg" type="text"/>
 			<button id="input-btn">Send</button>
-		</div>
+		</form>
 
 		<script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-		<script src="/scripts/send-msg.js"></script>
-		<script src="/scripts/receive-msg.js"></script>
+		<script src="/scripts/msg-io.js"></script>
 	</main>
 </body>
 </html>
